<resources>
    <string name="app_name" translatable="false">Playlist Maker.</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="description_back_button">Назад</string>
    <string name="yandexLinkDeveloper">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="text_to_dv1st">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_to_dv2st">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yandexLinkOffer">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="retry">Обновить</string>
    <string name="ResultsPlaceholder">Ничего не нашлось</string>
    <string name="server_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>

    <!-- Сёрч Активити-->
    <string name="unknown_country">Unknown Country</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_release_date">Unknown Release Date</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="default_url">Default URL</string>
    <string name="default_preview_url">Default Preview URL</string>

    <!-- Аудио Плеер Активити-->
    <string name="unknown_album">Unknown Album</string>
    <string name="initial_time">00:00</string>

    <!-- Трак Активити-->
    <string name="unknow">Неизвестно</string>

</resources>