<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SettingsActivityStyle"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/panelSettingsHeader"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/buttonSettingsBack"
            style="@style/IconColorStye"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_back_button"
            app:srcCompat="@drawable/arrowleft" />
        <TextView
            android:id="@+id/textSettingsBack"
            style="@style/TextBackStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="@dimen/textSize" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/listSettingsTheme"
        style="@style/SettingsItemFrameLayout"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/textSettingsTheme"
            style="@style/SettingsItemTextView"
            android:text="@string/theme" />
        <Switch
            android:id="@+id/switchSettingsTheme"
            style="@style/CustomSwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/size_18dp" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/listSettingsShare"
        style="@style/SettingsItemFrameLayout">
        <TextView
            android:id="@+id/textSettingsShare"
            style="@style/SettingsItemTextView"
            android:text="@string/share" />
        <ImageView
            android:id="@+id/imageSettingsShare"
            style="@style/SettingsItemImageView"
            app:srcCompat="@drawable/share" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/listSettingsSupport"
        style="@style/SettingsItemFrameLayout">
        <TextView
            android:id="@+id/textSettingsSupport"
            style="@style/SettingsItemTextView"
            android:text="@string/support" />
        <ImageView
            android:id="@+id/imageSettingsSupport"
            style="@style/SettingsItemImageView"
            app:srcCompat="@drawable/support" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/listSettingsTerms"
        style="@style/SettingsItemFrameLayout">
        <TextView
            android:id="@+id/textSettingsTerms"
            style="@style/SettingsItemTextView"
            android:text="@string/terms" />
        <ImageView
            android:id="@+id/imageSettingsTerms"
            style="@style/SettingsItemImageView"
            app:srcCompat="@drawable/arrowright" />
    </FrameLayout>



</LinearLayout>



